--- a/src/main/frontend/themes/worktimer/styles.css
+++ b/src/main/frontend/themes/worktimer/styles.css
@@ -7,7 +7,8 @@ vaadin-progress-bar {
     rotate: 270deg;
     min-height: 10vh;
     width: 20%;
-    margin-top: 30%;
+    margin-top: 10%;
+    margin-left: 40%;
 
 
 
